--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,22 +12,23 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - pgdata:/var/lib/postresql/data
+      - /var/lib/postresql/data
     # networks:
     #   custom:
-volumes:
-  pgdata:
-  # mongodb:
-  #   image: mongo
-  #   environment:
-  #     - MONGO_INITDB_ROOT_USERNAME=root
-  #     - MONGO_INITDB_ROOT_PASSWORD=mongopw
-  #   ports:
-  #     - 27017:27017
-  #   volumes:
-  #     - /var/lib/mongodb/data
-  #   networks:
-  #     custom:
+  mongodb:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=mongopw
+    ports:
+      - 27017:27017
+    volumes:
+      - /var/lib/mongodb/data
+# volumes:
+#   pgdata:
+#   mongodata:
+    # networks:
+    #   custom:
   # rabbitmq:
   #   image: rabbitmq:3-management-alpine
   #   ports:
