fix for section 7 dockerizing app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       - 5432:5432
     volumes:
       - pgdata:/var/lib/postresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
     # networks:
     #   custom:
@@ -32,12 +37,17 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmqctl status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
 
   #   networks:
   #     custom:
   auction-svc:
-    image: trycatchlearn/auction-svc:latest
+    image: baldaivanovna/auction-svc:latest
     build: 
       context: .
       dockerfile: src/AuctionService/Dockerfile
@@ -46,6 +56,8 @@ services:
       - ASPNETCORE_URLS=http://+:80
       - ASPNETCORE_URLS=http://+:7777
       - RabbitMq__Host=rabbitmq
+      - RabbitMq__Port=5672
+      - RabbitMq__ConnectionString=amqp://guest:guest@rabbitmq:5672/
       - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=auctions
       - IdentityServiceUrl=http://identity-svc
       - Kestrel__Endpoints__Grpc__Protocols=Http2
@@ -58,10 +70,16 @@ services:
     depends_on:
       - postgres
       - rabbitmq
+      
+      # postgres:
+      #   condition: service_healthy
+      # rabbitmq:
+      #   condition: service_healthy
     # networks:
     #   custom:
+    restart: unless-stopped
   search-svc:
-    image: trycatchlearn/search-svc:latest
+    image: baldaivanovna/search-svc:latest
     build: 
       context: .
       dockerfile: src/SearchService/Dockerfile
@@ -79,7 +97,7 @@ services:
   #   networks:
   #     custom:
   identity-svc:
-    image: trycatchlearn/identity-svc:latest
+    image: baldaivanovna/identity-svc:latest
     build: 
       context: .
       dockerfile: src/IdentityService/Dockerfile
@@ -100,7 +118,7 @@ services:
   #     custom:
   #       ipv4_address: 10.5.0.200
   gateway-svc:
-    image: trycatchlearn/gateway-svc:latest
+    image: baldaivanovna/gateway-svc:latest
     build: 
       context: .
       dockerfile: src/GatewayService/Dockerfile
@@ -111,10 +129,14 @@ services:
       # - VIRTUAL_HOST=api.carsties.com
     ports:
       - 6001:80    
+    depends_on:
+      - postgres
+      - rabbitmq
+      - auction-svc
   #   networks:
   #     custom:
   # bid-svc:
-  #   image: trycatchlearn/bid-svc:latest
+  #   image: baldaivanovna/bid-svc:latest
   #   build: 
   #     context: .
   #     dockerfile: src/BiddingService/Dockerfile
@@ -133,7 +155,7 @@ services:
   #   networks:
   #     custom:
   # notify-svc:
-  #   image: trycatchlearn/notify-svc:latest
+  #   image: baldaivanovna/notify-svc:latest
   #   build: 
   #     context: .
   #     dockerfile: src/NotificationService/Dockerfile
@@ -148,7 +170,7 @@ services:
   #   networks:
   #     custom:
   # web-app:
-  #   image: trycatchlearn/web-app
+  #   image: baldaivanovna/web-app
   #   build: 
   #     context: .
   #     dockerfile: frontend/web-app/Dockerfile
