--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -14,6 +14,7 @@
     "flowbite-react": "^0.10.2",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
