--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "cors": "^2.8.5",
     "flowbite-react": "^0.10.2",
-    "next": "14.2.14",
+    "next": "^14.2.14",
     "next-auth": "^4.24.8",
     "query-string": "^9.1.0",
     "react": "^18",
@@ -22,6 +21,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
