--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -155,19 +155,19 @@ services:
       - rabbitmq
   #   networks:
   #     custom:
-  # notify-svc:
-  #   image: baldaivanovna/notify-svc:latest
-  #   build: 
-  #     context: .
-  #     dockerfile: src/NotificationService/Dockerfile
-  #   environment:
-  #     - ASPNETCORE_ENVIRONMENT=Development
-  #     - ASPNETCORE_URLS=http://+:80
-  #     - RabbitMq__Host=rabbitmq
-  #   ports:
-  #     - 7004:80
-  #   depends_on:
-  #     - rabbitmq
+  notify-svc:
+    image: baldaivanovna/notify-svc:latest
+    build: 
+      context: .
+      dockerfile: src/NotificationService/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+    ports:
+      - 7004:80
+    depends_on:
+      - rabbitmq
   #   networks:
   #     custom:
   # web-app:
