--- a/src/GatewayService/appsettings.json
+++ b/src/GatewayService/appsettings.json
@@ -73,7 +73,7 @@
       },
       "notifications": {
         "ClusterId": "notifications",
-        "_CorsPolicy": "customPolicy",
+        "CorsPolicy": "customPolicy",
         "Match": {
           "Path": "/notifications/{**catch-all}"
         }
