--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "date-fns": "^4.1.0",
     "flowbite-react": "^0.10.2",
     "next": "^14.2.14",
     "next-auth": "^4.24.8",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-countdown": "^2.3.6",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "zustand": "^5.0.0-rc.2"
   },
