--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,24 @@
 #         - subnet: 10.5.0.0/16
 
 services:
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    ports:
+      - 5672:5672
+      - 15672:15672
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmqctl status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
   postgres:
     image: postgres
     environment:
       - POSTGRES_PASSWORD=postgrespw
+    command: postgres -c log_min_messages=WARNING 
     ports:
       - 5432:5432
     volumes:
@@ -18,6 +32,9 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
     restart: unless-stopped
     # networks:
     #   custom:
@@ -30,18 +47,16 @@ services:
       - 27017:27017
     volumes:
       - mongodata:/var/lib/mongodb/data
-    restart: unless-stopped
-
-  rabbitmq:
-    image: rabbitmq:3-management-alpine
-    ports:
-      - 5672:5672
-      - 15672:15672
     healthcheck:
-      test: ["CMD-SHELL", "rabbitmqctl status"]
+      test: ["CMD-SHELL", "mongosh --eval 'db.adminCommand({ping: 1})'"]
       interval: 10s
       timeout: 5s
       retries: 5
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
     restart: unless-stopped
 
   #   networks:
@@ -64,12 +79,27 @@ services:
       - Kestrel__Endpoints__Grpc__Url=http://+:7777
       - Kestrel__Endpoints__WebApi__Protocols=Http1
       - Kestrel__Endpoints__WebApi__Url=Http://+:80
+      - Logging__LogLevel__Default=Warning
+      - Logging__LogLevel__Microsoft=Warning
+      - Logging__LogLevel__Microsoft.AspNetCore=Warning
+      - Logging__LogLevel__Microsoft.Hosting.Lifetime=Warning
     ports:
       - 7001:80
       - 7777:7777
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmqctl status"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
     depends_on:
-      - postgres
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      mongodb:
+        condition: service_healthy
+      # - postgres
+      # - rabbitmq
       
       # postgres:
       #   condition: service_healthy
@@ -89,11 +119,16 @@ services:
       - RabbitMq__Host=rabbitmq
       - ConnectionStrings__MongoDbConnection=mongodb://root:mongopw@mongodb
       - AuctionServiceUrl=http://auction-svc
+      - LOG_LEVEL=warning
     ports:
       - 7002:80
     depends_on:
-      - mongodb
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      mongodb:
+        condition: service_healthy
   #   networks:
   #     custom:
   identity-svc:
@@ -105,15 +140,18 @@ services:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
       - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=identitydb
-      # - ASPNETCORE_ENVIRONMENT=Docker
-      # - ASPNETCORE_URLS=http://+:80
+      - LOG_LEVEL=warning
       # - ClientApp=http://app.carsties.com
-      # - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=identitydb
       # - VIRTUAL_HOST=id.carsties.com
     ports:
       - 5000:80
     depends_on:
-      - postgres
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      mongodb:
+        condition: service_healthy
   #   networks:
   #     custom:
   #       ipv4_address: 10.5.0.200
@@ -125,14 +163,22 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
+      - LOG_LEVEL=warning
       # - ClientApp=https://app.carsties.com
       # - VIRTUAL_HOST=api.carsties.com
     ports:
       - 6001:80    
     depends_on:
-      - postgres
-      - rabbitmq
-      - auction-svc
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      mongodb:
+        condition: service_healthy
+    # depends_on:
+    #   - postgres
+    #   - rabbitmq
+    #   - auction-svc
   #   networks:
   #     custom:
   bid-svc:
@@ -147,12 +193,20 @@ services:
       - ConnectionStrings__BidDbConnection=mongodb://root:mongopw@mongodb
       - IdentityServiceUrl=http://identity-svc
       - GrpcAuction=http://auction-svc:7777
+      - LOG_LEVEL=warning
     ports:
       - 7003:80
     depends_on:
-      - auction-svc
-      - mongodb
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      mongodb:
+        condition: service_healthy
+    # depends_on:
+    #   - auction-svc
+    #   - mongodb
+    #   - rabbitmq
   #   networks:
   #     custom:
   notify-svc:
@@ -164,10 +218,18 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:80
       - RabbitMq__Host=rabbitmq
+      - LOG_LEVEL=warning
     ports:
       - 7004:80
     depends_on:
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      mongodb:
+        condition: service_healthy
+    # depends_on:
+    #   - rabbitmq
   #   networks:
   #     custom:
   # web-app:
