--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Debug",
       "Override": {
         "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.Hosting.Lifetime": "Warning",
         "Microsoft.AspNetCore.Authentication": "Debug",
         "System": "Warning"
       }
