--- a/src/SearchService/appsettings.Development.json
+++ b/src/SearchService/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Default": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
   "ConnectionStrings": {
