--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,12 +139,12 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
+      - IssuerUri=https://id.carsties.local  
       - ConnectionStrings__DefaultConnection=Server=postgres:5432;User Id=postgres;Password=postgrespw;Database=identitydb
-      - LOG_LEVEL=warning
-      # - ClientApp=http://app.carsties.com
-      # - VIRTUAL_HOST=id.carsties.com
-    ports:
-      - 5000:80
+      - ClientApp=https://app.carsties.local
+      - VIRTUAL_HOST=id.carsties.local
+    # ports:
+    #   - 5000:80
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -163,11 +163,10 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
-      - LOG_LEVEL=warning
-      # - ClientApp=https://app.carsties.com
-      # - VIRTUAL_HOST=api.carsties.com
-    ports:
-      - 6001:80    
+      - ClientApp=https://app.carsties.local
+      - VIRTUAL_HOST=api.carsties.local
+    # ports:
+    #   - 6001:80    
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -193,7 +192,6 @@ services:
       - ConnectionStrings__BidDbConnection=mongodb://root:mongopw@mongodb
       - IdentityServiceUrl=http://identity-svc
       - GrpcAuction=http://auction-svc:7777
-      - LOG_LEVEL=warning
     ports:
       - 7003:80
     depends_on:
@@ -232,36 +230,47 @@ services:
     #   - rabbitmq
   #   networks:
   #     custom:
-  # web-app:
-  #   image: baldaivanovna/web-app
-  #   build: 
-  #     context: .
-  #     dockerfile: frontend/web-app/Dockerfile
-  #   volumes:
-  #     - /var/lib/web/data
-  #   extra_hosts:
-  #     - id.carsties.com:10.5.0.200
-  #   environment:
-  #     - NEXTAUTH_SECRET=somethingreallyreallysecret
-  #     - NEXTAUTH_URL=http://app.carsties.com
-  #     - NEXTAUTH_URL_INTERNAL=http://web-app:3000
-  #     - API_URL=http://gateway-svc/
-  #     - ID_URL=http://id.carsties.com
-  #     - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc/notifications
-  #     - VIRTUAL_HOST=app.carsties.com
-  #     - VIRTUAL_PORT=3000
+  web-app:
+    image: baldaivanovna/web-app
+    build: 
+      context: .
+      dockerfile: frontend/web-app/Dockerfile
+    volumes:
+      - /var/lib/web/data
+    # ports:
+    #   - 3000:3000
+    # extra_hosts:
+    #   - id.carsties.com:10.5.0.200
+    environment:
+      - AUTH_SECRET="gEFoO9ac1rFqpkuJM9x6iZLldZNHXBetqNY3xxcrKHo="
+      # - NEXTAUTH_SECRET=secret 
+      - NEXTAUTH_URL=https://app.carsties.local
+      - NEXTAUTH_URL_INTERNAL=http://web-app:3000
+      - NEXT_PUBLIC_NOTIFY_URL=https://api.carsties.local/notifications
+      - API_URL=http://gateway-svc/
+      - ID_URL=https://id.carsties.local
+      - ID_URL_INTERNAL=http://identity-svc
+      - VIRTUAL_HOST=app.carsties.local
+      - VIRTUAL_PORT=3000
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      mongodb:
+        condition: service_healthy
   #   networks:
   #     custom:
-  # nginx-proxy:
-  #   image: nginxproxy/nginx-proxy
-  #   ports:
-  #     - 80:80
-  #     - 443:443
-  #   networks:
-  #     custom:
-  #   volumes:
-  #     - /var/run/docker.sock:/tmp/docker.sock:ro
-  #     - ./devcerts:/etc/nginx/certs
+  nginx-proxy:
+    image: nginxproxy/nginx-proxy
+    ports:
+      - 80:80
+      - 443:443
+    # networks:
+    #   custom:
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./devcerts:/etc/nginx/certs
 
 volumes:
   pgdata:
