--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -10,8 +10,10 @@
       }
     }
   },
-
+  "IssuerUri": "http://localhost:5000",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=identitydb"
-  }
+  },
+  "ClientApp": "http://localhost:3000",
+  "ClientSecret": "secret"
 }
